--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ select {
 	line-height: 1.3;
 }
 .outer-wrapper {
-	background-color: #3776ad;
+	background-color: #ad5837;
 	padding: 6%;
 	padding-bottom: 92px;
 	text-align: center;
